syntax = "proto3";

package Video;

enum VideoTransportPublishStatus {
  TRANSPORT_PENDING = 0;
  TRANSPORT_PROCESSING = 1;
  TRANSPORT_PROCESSED = 2;
  TRANSPORT_PUBLISHED = 3;
  TRANSPORT_FAILED = 4;
}

enum VideoTransportVisibilityStatus {
  TRANSPORT_PRIVATE = 0;
  TRANSPORT_PUBLIC = 1;
  TRANSPORT_UNLISTED = 2;
}

enum VideoTransportSortOption {
  TRANSPORT_NEWEST = 0;
  TRANSPORT_OLDEST = 1;
  TRANSPORT_POPULAR = 2;
}

message GetPresignedUrlDto {
  optional string fileName = 1;
  string userId = 2;
}

message VideoCreateDto {
  string ownerId = 1;
  string channelId = 2;
  string title = 3;
  string videoFileIdentifier = 4;
  string videoThumbnailIdentifier = 5;
  repeated string categories = 6;
  optional string description = 7;
  VideoTransportPublishStatus videoTransportPublishStatus = 8;
  VideoTransportVisibilityStatus videoTransportVisibilityStatus = 9;
}

message VideoFindDto {
  string id = 1;
}

message VideoUpdateDto {
  string id = 1;
  optional string title = 2;
  optional string videoFileIdentifier = 3;
  optional string videoThumbnailIdentifier = 4;
  repeated string categories = 5;
  optional string description = 6;
  optional VideoTransportPublishStatus videoTransportPublishStatus = 7;
  optional VideoTransportVisibilityStatus videoTransportVisibilityStatus = 8;
}

message VideoFindQueryDto {
  optional int32 limit = 1;
  optional int32 skip = 2;
  repeated string categories = 3;
  optional string channelId = 4;
  optional string userId = 5;
  optional string search = 6;
  optional VideoTransportSortOption videoTransportSortOption = 7;  
}

message GetPreSignedUrlResponse {
  string response = 1;
  string presignedUrl = 2;
  string fileIdentifier = 3;
}

message VideoPublishedResponse {
  string response = 1;
  string videoId = 2;
}

message VideoFoundResponse {
  string id = 1;
  string ownerId = 2;
  string channelId = 3;
  string title = 4;
  string videoFileIdentifier = 5;
  string videoThumbnailIdentifier = 6;
  repeated string categories = 7;
  optional string description = 8;
  VideoTransportPublishStatus videoTransportPublishStatus = 9;
  VideoTransportVisibilityStatus videoTransportVisibilityStatus = 10;
}

message VideosFoundResponse {
  repeated VideoFindDto videoFindDto = 1;
}

message VideoUpdatedResponse {
  string response = 1;
  string videoId = 2;
}

message Empty {}

message VideosHealthCheckRequest {
  string service = 1;
}

message VideosHealthCheckResponse {
  enum ServingStatus {
    UNKNOWN = 0;
    SERVING = 1;
    NOT_SERVING = 2;
    SERVICE_UNKNOWN = 3;
  }
  ServingStatus status = 1;
}

service VideoService {
  rpc getPresignedUrlForVideoFileUpload(GetPresignedUrlDto) returns (GetPreSignedUrlResponse) {}
  rpc getPresignedUrlForThumbnailFileUpload(GetPresignedUrlDto) returns (GetPreSignedUrlResponse) {}
  rpc save(VideoCreateDto) returns (VideoPublishedResponse) {}
  rpc findOne(VideoFindDto) returns (VideoFoundResponse) {}
  rpc findAll(Empty) returns (VideosFoundResponse) {}
  rpc update(VideoUpdateDto) returns (VideoUpdatedResponse) {}
  rpc findVideos(VideoFindQueryDto) returns (VideosFoundResponse) {}
  rpc Check(VideosHealthCheckRequest) returns (VideosHealthCheckResponse) {}
}